--- a/css/pet.css
+++ b/css/pet.css
@@ -1,5 +1,14 @@
-p, h3, h4{
+p, h3, h4, body{
     margin: 0;
+    font-family: Quicksand;
+}
+.sub-title{
+    grid-column: span 2;
+    color: #F2AB1E;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 25px;
+    margin-bottom: 2%;
 }
 /* Product infromation */
 .product-infomation {
@@ -40,9 +49,7 @@ p, h3, h4{
 }
 /* Infomation product */
 .infomation{
-    font-family: Quicksand;
     margin-top: 5%;
-
 }
 .infomation .title{
     font-size: 35px;
@@ -136,19 +143,9 @@ p, h3, h4{
     display: grid;
     grid-template-columns: 62% 33%;
     column-gap: 5%;
-    font-family: Quicksand;
     border-top: 1px solid #D9D9D9;
     margin: 4% 5% 0;
-    padding-top: 3% ;
-
-}
-.product-describe .sub-title{
-    grid-column: span 2;
-    color: #F2AB1E;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 25px;
-    margin-bottom: 2%;
+    padding-top: 3%;
 }
 .product-describe .describe-content, .product-describe .promotion-benefit-content{
     padding: 3% 5%;
@@ -165,4 +162,87 @@ p, h3, h4{
 .product-describe .promotion-benefit-content .fa-check{
     color: #EEBE62;
     padding-right: 2%;
+}
+
+/* Product suggest */
+.product-suggest .sub-title{
+    border-top: 1px solid #D9D9D9;
+    margin: 4% 5% 2%;
+    padding-top: 3%;
+}
+.product-slider{
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto;
+    justify-content: space-around;
+    align-items: center;
+    background: #DDD;
+    padding: 2% 0;
+}
+.product-slider .product{
+    width: 217px;
+    height: 270px;
+    text-align: center;
+    border-radius: 19.203px;
+    background: #EFBB3F;
+    box-shadow: 1.88px 3.88px 3.88px 0px rgba(0, 0, 0, 0.50);
+    align-self: center;
+    justify-self: center;   
+}
+.product-slider .product .product-image{
+    width: 217px;
+    height: 190px;
+    border-radius: 19.2px;
+    background: #FFF;
+}
+.product-slider .product .star{
+    color: #EEBE62; 
+    font-size: 16px;
+    display: flex; 
+    padding: 10px;
+}
+.star .fa-star{
+    margin-right: 5px; 
+}
+.product-slider .product .image-product{
+    height: 150px;
+    width: auto;
+}
+.product-slider .product .product-information{
+    float: left;
+    padding: 5px 15px;
+    text-decoration: none;
+}
+.product-slider .product .product-link{
+    text-decoration: none;
+}
+.product-slider .product .price-product{
+    width: 100%;
+    color: #000;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: left;
+}
+.product-slider .product .name-product{
+    color: #000;
+    font-size: 18px;
+    font-weight: 400;
+    text-align: left;
+}
+.btn-prep, .btn-next{
+    background: transparent;
+    outline: none;
+    border: none;
+    color: #EFBB3F;
+    font-size: 92px;
+}
+.slider-dot{
+    grid-column: span 6;
+    padding-top: 2%;
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    color: #EEBE62;
+}
+.slider-dot .fa-circle:first-child{
+    color: #212121;
 }
