--- a/css/pet.css
+++ b/css/pet.css
@@ -2,6 +2,9 @@ p, h3, h4, body{
     margin: 0;
     font-family: Quicksand;
 }
+a {
+    text-decoration: none;
+}
 .sub-title{
     grid-column: span 2;
     color: #F2AB1E;
@@ -13,6 +16,22 @@ p, h3, h4, body{
 .fa-star{
     color: #EEBE62; 
 }
+
+/* Address */
+.address{
+    padding: 25px 4%;
+    text-align: left;
+    font-family: Quicksand;
+    font-size: 20px;
+}
+.product-link{
+    color: #000;
+    text-transform: uppercase;
+}
+.current-link{
+    font-weight: bold;
+}
+
 /* Product infromation */
 .product-infomation {
     display: grid;
