--- a/css/header.css
+++ b/css/header.css
@@ -10,8 +10,18 @@ body {
     overflow-x: hidden;
     margin: 0;
     padding: 0;
-    background-color: #FFFAF0;
+    /* background-color: #FFFAF0; */
 }
+
+/* Bổ sung các rules để thay đổi màu khi thêm lớp active */
+.menu-item.active {
+    color: #FF6B35;
+}
+
+.arrow.active {
+    color: #FF6B35;
+}
+
 
 header {
     position: absolute;
@@ -30,7 +40,6 @@ header {
 .group {
     display: flex;
     align-items: center;
-
 }
 
 header ul {
@@ -52,22 +61,43 @@ ul.dropdown li {
     font-size: 0.85em;
 }
 
-ul.dropdown li:hover {
-    display: block;
-    background-color: #ac3f3f;
-}
-
 
 ul.dropdown {
-    width: 25%;
-    height: 500px;
+    margin-top: 4px;
+    width: 28%;
+    height: 200px;
     position: absolute;
     z-index: 999;
     display: none;
+    margin-left: -20px;
+    border-radius: 5px;
+    background: #fffaf0;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+    padding-left: 10px;
+}
+
+ul.dropdown a:hover {
+    color: #FF6B35;
+}
+
+
+
+.dropdown li:hover {
+    position: relative;
+    background: #F2F2F2;
+    width: 260px;
+    left: -4.2%;
+    border-left: 5px solid #FF6B35;
+    padding-left: 15px;
+    border-radius: 2px;
+    position: relative;
+    z-index: 0;
 }
 
 ul li:hover ul.dropdown {
     display: block;
+
+
 }
 
 .navigation li:hover .htmlcss-arrow {
@@ -88,23 +118,34 @@ header ul li a {
     letter-spacing: 0.05em;
 }
 
+
 header ul li a::before {
     content: '';
     position: absolute;
-    bottom: -2px;
-    width: 100px;
-    height: 2px;
-    background: #333;
+    bottom: -4px;
+    width: 98%;
+    height: 4px;
+    background: #FF6B35;
     transform: scale(0);
     transition: transform 0.5s ease-in-out;
     transform-origin: right;
-
 }
+
+
+ul.dropdown a:hover::before {
+    display: none;
+    content: none;
+    transition: none;
+    text-decoration: none;
+    transform: none;
+}
+
 
 header ul li a:hover::before {
     transform: scale(1);
     transform-origin: left;
 }
+
 
 .search {
     position: relative;
