--- a/css/pets.css
+++ b/css/pets.css
@@ -1,120 +1,202 @@
 /* Sidebar pet filter */
-html, body {
+body {
     height: 100%;
+    background: #fffaf0;
+    font-family: Quicksand;
 }
 a {
     text-decoration: none;
 }
 
 /* Address */
-.address{
-    padding: 25px 4%;
+.address {
+    margin-top: 110px;
+    padding: 1.5625rem 4%;
     text-align: left;
-    font-family: Quicksand;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
-.product-link{
+.address-link {
     color: #000;
     text-transform: uppercase;
 }
-.current-link{
+.current-link {
     font-weight: bold;
 }
 
-.page-container{
+.page-container {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
     margin: 0 4%;
+/* background: #fffaf0; */
 }
 
-.sidebar-filter{
+.sidebar-filter {
     width: 20%;
-    /* width: 299px; */
+/* width: 299px; */
+}
+.sidebar-filter>p{
+    font-size: 1.25rem;
 }
 
-.content-product{
+.content-product {
     flex: 1;
 }
 
 /* Filter */
-.filter-block{
+.filter-block {
     margin-bottom: 1em;
     padding-bottom: 1em;
 }
-
-.filter-block:not(:last-child){
+.filter-block:not(:last-child) {
     border-bottom: 1px solid #ccc;
 }
-
-
-/* Filter Price */
-.price-input{
-    width: 100%;
-    display: flex;
-}
-.field input{
-    width: 85%;
-    height: 100%;
-    outline: none;
-    margin-left: 5%;
-    border: 1px solid #D9D9D9;
-    border-radius: 5px;
-    text-align: center;
-    font-family: Quicksand;
-}
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-}
-.price-input .seperator{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-/* Filter Dogs and Cats */
-.filter-title{
+.filter-title {
     display: flex;
     margin-top: 0.5em;
     margin-bottom: 1em;
     align-items: center;
 }
-
-.filter-block h4{
+.filter-title h4 {
     margin: 0;
-    font-family: Quicksand;
-    font-size: 25px;
+    font-size: 1.5625rem;
     font-weight: 700;
     width: 45%;
+    cursor: pointer;
+}
+.filter-title h4::before{
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    content: "\f078";
+    font-size: 1.5625rem;
+    padding-right: 10%;
+}
+.show-dropdown .filter-title h4::before{
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    content: "\f077";
+    font-size: 1.5625rem;
+    padding-right: 10%;
 }
 
-.checkbox-all{
+/* Filter Price */
+.range-price{
+    display: none;
+}
+.show-dropdown .range-price{
+    display: block;
+}
+.range-price .price-input {
+    width: 100%;
+    display: flex;
+    margin-bottom: 5%;
+}
+.range-price .field input {
+    width: 85%;
+    height: 100%;
+    outline: none;
+    margin-left: 5%;
+    border: 1px solid #d9d9d9;
+    border-radius: 5px;
+    text-align: center;
+    -moz-appearance: textfield;
+    appearance: textfield;
+    }
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+}
+.range-price .price-input .seperator {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.range-price .slider {
+    height: 5px;
+    border-radius: 5px;
+    background: #ddd;
+    position: relative;
+    margin: 0 3%;
+}
+.range-price .slider .progress {
+    height: 5px;
+    left: 30%;
+    right: 30%;
+    position: absolute;
+    border-radius: 5px;
+    background: #eebe62;
+}
+.range-price .range-input {
+    position: relative;
+}
+.range-price .range-input input {
+    position: absolute;
+    top: -5px;
+    height: 5px;
+    width: 100%;
+    -webkit-appearance: none;
+    appearance: none;
+    pointer-events: none;
+    background: none;
+}
+input[type="range"]::-webkit-slider-thumb {
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    -webkit-appearance: none;
+    appearance: none;
+    background: #eebe62;
+    pointer-events: auto;
+    cursor: pointer;
+}
+input[type="range"]::-moz-range-thumb {
+    height: 15px;
+    width: 15px;
+    border: none;
+    border-radius: 50%;
+    -moz-appearance: none;
+    appearance: none;
+    background: #eebe62;
+    pointer-events: auto;
+    cursor: pointer;
+}
+
+/* Filter Dogs and Cats */
+
+
+.checkbox-all {
     width: 55%;
     text-align: right;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
+}
+.checkbox-all input[type="checkbox"] {
+    margin: 0 0 0 10px;
 }
 
-.filter-block li{
+.filter-block li {
     display: flex;
-    font-size: 0.9em;
+    font-size: 0.9rem;
     position: relative;
-    line-height: 2;    
+    line-height: 2;
     align-items: center;
     justify-content: space-around;
 }
 
-.pets-checkbox{
+.pets-checkbox {
+    display: none;
     padding-left: 3px;
     list-style: none;
 }
-
-input[type="checkbox"]{
+.show-dropdown .pets-checkbox {
+    display: block;
+}
+input[type="checkbox"] {
     appearance: none;
     -webkit-appearance: none;
     width: 16px;
     height: 16px;
-    border: 1px solid #BBB;
+    border: 1px solid #bbb;
     border-radius: 2px;
     cursor: pointer;
     display: flex;
@@ -124,41 +206,38 @@ input[type="checkbox"]{
     margin: 0 10px;
 }
 
-input[type="checkbox"]:after{
+input[type="checkbox"]:after {
     font-family: "Font Awesome 6 Free";
     font-weight: 900;
     content: "\f00c";
-    font-size: 13px;
+    font-size: 0.8125rem;
     display: none;
 }
 
 input[type="checkbox"]:hover {
-    background-color: #BBB;
+    background-color: #bbb;
 }
 
 input[type="checkbox"]:checked:after {
     display: block;
 }
 
-.filter-block label .pets-name{
-    font-family: Quicksand;
-    font-size: 18px;
+.filter-block label .pets-name {
+    font-size: 1.125rem;
     font-weight: 600;
     cursor: pointer;
 }
 
-.filter-block li .pets-count{
+.filter-block li .pets-count {
     margin-left: auto;
-    color: #BBB;
-    font-family: Quicksand;
-    font-size: 15px;
+    color: #bbb;
+    font-size: 0.9375rem;
     font-weight: 400;
     text-align: right;
 }
 
-
 /* Content Product */
-.content-product{
+.content-product {
     margin-left: 40px;
 }
 
@@ -170,21 +249,19 @@ input[type="checkbox"]:checked:after {
 }
 
 /* Showing num product available */
-.result-count{
+.result-count {
     width: 65%;
     color: #000;
-    font-family: Quicksand;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 500;
 }
 
 /* Sort options */
 .sort-options {
-    font-family: Quicksand;
     font-size: 18px;
 }
 
-.sort-options p{
+.sort-options p {
     margin: 0;
 }
 
@@ -193,89 +270,106 @@ input[type="checkbox"]:checked:after {
     height: 38px;
     border-radius: 35px;
     text-align: center;
-    background: #EFBB3F;
-    font-family: Quicksand;
+    background: #efbb3f;
     font-size: 18px;
     cursor: pointer;
-    /* appearance: none; */
+/* appearance: none; */
 }
 
-
 /* Product list */
-.product-list{
+#product-list {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 35px;
     padding: 20px 0;
-    justify-content: center; 
+    justify-content: center;
     align-content: center;
 }
 
 /* Product */
-.product{
+.product {
     width: 217px;
-    height: 270px;
+    height: 300px;
     text-align: center;
     border-radius: 19.203px;
-    background: #EFBB3F;
-    box-shadow: 1.88px 3.88px 3.88px 0px rgba(0, 0, 0, 0.50);
+    background: #efbb3f;
+    box-shadow: 1.88px 3.88px 3.88px 0px rgba(0, 0, 0, 0.5);
     align-self: center;
     justify-self: center;
-    
 }
-
-.product-image{
-    width: 217px;
-    height: 190px;
+.product .product-image {
+    width: 100%;
+    height: 65%;
     border-radius: 19.2px;
-    background: #FFF;
+    background: #fff;
 }
-
-.star{
-    color: #EEBE62; 
-    font-size: 16px;
-    display: flex; 
+.product .product-image .star-and-bag_plus {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-evenly;
+    height: 25%;
+    margin-bottom: 2%;
+    align-items: center;
+}
+.product .product-image .star-and-bag_plus .star {
+    font-size: 1rem;
+    display: flex;
     padding: 10px;
 }
-  
-.fa-star{
-    margin-right: 5px; 
+.product .product-image .star-and-bag_plus .star .full.fa-star {
+    color: #eebe62;
+    margin-right: 5px;
 }
-
-.image-product{
+.product .product-image .star-and-bag_plus .star .empty.fa-star {
+    color: #ccc;
+    margin-right: 5px;
+}
+.product .product-image .star-and-bag_plus .bag-shopping {
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    margin-right: 3%;
+}
+.product .product-image .star-and-bag_plus .bag-shopping > svg {
+    height: 95%;
+    width: 60%;
+    opacity: 0;
+}
+.product:hover .product-image .star-and-bag_plus .bag-shopping > svg {
+    opacity: 1;
+}
+.product .product-image .star-and-bag_plus .bag-shopping:hover {
+    fill: #efbb3f;
+}
+.product .product-image .image-product {
     height: 150px;
     width: auto;
+    transform: translateY(-7%);
 }
-
-.product-information{
+.product .product-information {
     float: left;
     padding: 5px 15px;
     text-decoration: none;
 }
-
-.product-link{
+.product .product-link {
     text-decoration: none;
 }
-
-.price-product{
+.product .product-information .price-product {
     width: 100%;
     color: #000;
-    font-family: Quicksand;
     font-size: 20px;
     font-weight: 700;
     text-align: left;
 }
-
-.name-product{
+.product .product-information .name-product {
     color: #000;
-    font-family: Quicksand;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 400;
     text-align: left;
 }
 
 /* Pagination */
-.pagination-container{
+.pagination-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -284,11 +378,11 @@ input[type="checkbox"]:checked:after {
     padding: 10px 40px;
     border-radius: 6px;
 }
-.pagination{
+.pagination {
     margin: 20px 30px;
     padding: 0;
 }
-.pagination li{
+.pagination li {
     display: inline-block;
     margin: 0 10px;
     width: 45px;
@@ -297,15 +391,16 @@ input[type="checkbox"]:checked:after {
     box-shadow: 0 0 3px #ccc inset;
     border-radius: 50%;
     text-align: center;
-    font-size: 22px;
+    font-size: 1.375rem;
     font-weight: bold;
     line-height: 45px;
     cursor: pointer;
 }
-.btn-prep, .btn-next{
+.btn-prep,
+.btn-next {
     background: transparent;
     outline: none;
     border: none;
-    color: rgba(238, 190, 98, 0.50);;
-    font-size: 42px;
+    color: rgba(238, 190, 98, 0.5);
+    font-size: 2.625rem;
 }
