cập nhập lại add to cart, sau khi sort, filter có thể add to cart

--- a/css/pets.css
+++ b/css/pets.css
@@ -331,6 +331,7 @@ input[type="checkbox"]:checked:after {
     margin-right: 3%;
     background: transparent;
     border: none;
+    cursor: pointer;
 }
 .product .product-image .star-and-bag_plus .bag-shopping > svg {
     height: 95%;
