--- a/css/Home1.css
+++ b/css/Home1.css
@@ -2,6 +2,7 @@
     position: relative;
     top: 120px;
     font-size: 1.5rem;
+    background-color: #fffaf0;
 }
 
 
@@ -18,6 +19,7 @@
     opacity: 1;
     height: 100vh;
 }
+
 .slider svg {
     height: 4rem;
     width: 4rem;
@@ -28,19 +30,19 @@
 }
 .content_left{
     position: relative;  
-    width: 40%;
+    width: 41%;
 }
 .slide_1{
     top: 25vh;
-    left: 7vw;
+    left: 10vw;
 }
 .slide_2{
     top: 20vh;
-    left: 7vw;
+    left: 10vw;
 }
 .slide_3{
     top: 25vh;
-    left: 7vw;
+    left: 10vw;
 }
 .img_intro{
     max-width: 100%;
@@ -101,7 +103,7 @@
     justify-content: space-around;
     position: absolute;
     top: 30vh;
-    left: 10%;
+    left: 7%;
     color: white;
 }
 .content_left>p{
@@ -211,8 +213,8 @@
 }
 .scroll_rotation>h1{
     position: absolute;
-    top: 17vh;
-    left: 6.5vw;
+    top: 18.5vh;
+    left: 7.5vw;
     font-weight: bold;
     color: gray;
 }
@@ -248,9 +250,9 @@
     top: 20vh;
 }
 .img_cat_food{
-    width: 250px;
+    width: 220px;
     position: absolute;
-    top: 4vh;
+    top: 4.5vh;
     left: 6vw;
 }
 .form_title_left>h2{
@@ -258,10 +260,11 @@
     top: 25vh;
     left: 22vw;
     width: 13%;
-}
-.form_title_left>h1:hover{
-    color: #FF6B35;
+    font-size: 2.5rem;
     cursor: pointer;
+}
+.form_title_left>h2:hover{
+    color: #FF6B35;
 }
 .bg_cat_food{
     background-color: #fff;
@@ -310,7 +313,7 @@
     height: 100%;
     background-color: rgba(128, 128, 128, 0.764);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    padding: 100px 0 0 500px;
+    padding: 100px 0 0 25%;
     z-index: 1000;
 }
 
@@ -377,6 +380,10 @@
     padding-left: 10px;
     font-size: 1.5rem;
 }
+.img_form_content>form input:focus{
+    outline: none;
+    border-bottom: 1px solid #FF6B35;
+}
 .img_form_content>form button{
     position: relative;
     top: 12vh;
@@ -402,7 +409,7 @@
 
 .service{
     display: grid;
-    grid-template-columns: 230px 300px;
+    grid-template-columns: 230px 230px;
     margin-top: 100px;
     column-gap: 50px;
 }
@@ -415,11 +422,11 @@
     background-color: #fff;
     justify-content: center;
     border-radius: 40px;
-    box-shadow: 1px 1px 10px gray;
+    box-shadow: 1px 1px 5px gainsboro;
 }
 .service a:hover{
     color: white;
-    background-color: #FF6B35;
+    background-color: #000;
     fill: white;
 }
 .img_bone{
@@ -450,11 +457,11 @@
     background-size: cover;
     background-position: center center;
     opacity: 1;
-    height: 130vh;
+    height: 140vh;
 }
 .trainer_title{
     position: relative;
-    width: 40%;
+    width: 45%;
     padding: 70px;
     text-align: center;
     left: 30%;
@@ -465,7 +472,7 @@
     height: 8rem;
     transform: rotate(-30deg);
     top: 10vh;
-    right: 35vw;
+    right: 40vw;
 }
 .trainer_content{
     display: flex;
@@ -495,7 +502,7 @@
     overflow: hidden;
 }
 .item_content *{
-    margin: 5px 15px;
+    margin: 5px 12px;
 }
 .item_content{
     position: relative;
@@ -526,7 +533,7 @@
     box-shadow: 1px 1px 5px gray;
     font-weight: bold;
     position: relative;
-    top: 5vh;
+    top: 10vh;
     left: 45%;
     cursor: pointer;
 }
@@ -538,14 +545,14 @@
 .achieve{
     position: relative;
     top: 230vh;
-    height: 90vh;
+    height: 110vh;
 }
 .achieve_wrapper{
     background-image: url(../assets/backgrounds/bg-home-service-overlay.png);
     height: 60vh;
     width: 90%;
     position: relative;
-    background-color: #FFC312;
+    background-color: #FF9933;
     border-radius: 40px;
     position: relative;
     top: 10vh;
@@ -562,7 +569,8 @@
     grid-template-rows: auto auto;
     gap: 100px;
     position: absolute;
-    top: 16vh;
+    top: 12vh;
+    left: 3vw;
 }
 .achieve_item{
     display: grid;
@@ -573,13 +581,13 @@
     cursor: default;
 }
 .achieve_item:hover{
-    color: #FF6B35;
+    color: #fffaf0;
 }
 .achieve_item svg{
     grid-column: 1 / span 1;
     grid-row: 1 / span 2;
     position: relative;
-    left: 4vw;
+    left: 2vw;
     top: 10px;
 }
 .img_achieve{
@@ -592,7 +600,7 @@
 }
 .img_achieve1{
     position: absolute;
-    top: -12vh;
+    top: -15vh;
     left: 10vw;
     z-index: 1;
     animation: slide-left 3s ease-in-out infinite alternate;
@@ -618,7 +626,7 @@
     left: 45%;
     top: 5vh;
     z-index: 1;
-    animation: food-roll 2s infinite linear;
+    animation: food-roll 3s infinite linear;
 }
 
 .achieve_right{
@@ -629,12 +637,13 @@
 }
 .achieve_right h1{
     position: absolute;
-    top: 5vh;
-    left: -70px;
+    top: 7vh;
+    left: -65px;
 }
 .achieve_right>svg{
     position: absolute;
-    left: -15vh;
+    top: 2vh;
+    left: -17vh;
     fill: #FF6B35;
 }
 .bg_achive_right_logo{
@@ -651,36 +660,34 @@
 /* top product */
 .highlight{
     position: relative;
-    top: 230vh;
-    background-color: #FF9933;
-    opacity: 0.9;
-    height: 80vh;
+    top: 210vh;
+    background-color: #FF8C4E;
+    height: 85vh;
 }
 .highlight h1{
     text-align: center;
-    padding: 100px 0 40px 0;
+    padding: 60px 0 40px 0;
 }
 .product{
-    width: 217px;
-    height: 270px;
+    width: 220px;
+    height: 290px;
     text-align: center;
     border-radius: 19.203px;
-    background: #ffc312;
+    background-image: linear-gradient(to bottom, #FF9933, #fc591e);
     box-shadow: 1.88px 3.88px 3.88px 0px rgba(0, 0, 0, 0.50);
     align-self: center;
     justify-self: center;
-    
 }
 
 .product-image{
-    width: 217px;
+    width: 220px;
     height: 190px;
     border-radius: 19.2px;
     background: #FFF;
 }
 
 .star{
-    color: #ffc312; 
+    color: #FF6B35; 
     font-size: 16px;
     display: flex; 
     padding: 10px;
@@ -706,7 +713,7 @@
 }
 .price-product{
     width: 100%;
-    color: #000;
+    color: #fff;
     font-family: Quicksand;
     font-size: 20px;
     font-weight: 700;
@@ -714,7 +721,7 @@
 }
 
 .name-product{
-    color: #000;
+    color: #fff;
     font-family: Quicksand;
     font-size: 18px;
     font-weight: 400;
@@ -722,12 +729,13 @@
 }
 .product-list{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 35px;
     padding: 20px 0;
     justify-content: center; 
     align-content: center;
     position: relative;
+    margin: 0 100px;
 }
 .num_pg_group{
     display: flex;
@@ -752,25 +760,27 @@
 .img_bowl{
     position: absolute;
     top: 55vh;
-    left: 75vw;
+    left: 90vw;
     z-index: 0;
 }
 
 /* discount */
 .discount{
     position: relative;
-    top: 250vh;
+    background-color: #fffaf0;
+    top: 210vh;
+    height: 100vh;
 }
 .discount_wrapper{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background-color: #232121;
     color: white;
     width: 90%;
     position: relative;
     left: 5%;
-    top: -50px;
+    top: 18vh;
     border-top-right-radius: 20% 60%;
     border-top-left-radius: 20% 60%;
     border-bottom-right-radius: 20% 60%;
@@ -779,11 +789,12 @@
 .discount_wrapper>h1{
     width: 20%;
     text-align: center;
+    margin-left: 10px;
 }
 .discount_offer>h1{
     width: 20vw;
     text-align: center;
-    padding: 90px 0;
+    padding: 70px 0;
 }
 .discount_offer>h1>span{
     color: #ffc312;
@@ -792,43 +803,36 @@
 .discount_offer{
     background-color: #FF6B35;
     border-radius: 200%;
-    margin: 40px 0;
+    margin: 40px 20px;
 }
 .img_discount{
     position: relative;
-    top: -60px;
+    top: -40px;
     left: 20px;
-    width: 300px;
+    width: 330px;
 }
 .img_discount1{
     position: absolute;
-    top: 24vh;
-    left: 27vw;
+    top: 52vh;
+    left: 25vw;
     width: 200px;
 }
 .discount_code{
-    margin: 0 50px;
+    margin: 0 20px;
     text-align: center;
 }
 .discount_code h2{
     color: #ffc312;
     margin-bottom: 50px;
 }
-.img_discount2{
-    width: 200px;
-    position: absolute;
-    left: 80%;
-    top: 32vh;
-    z-index: 1;
-    animation: food-roll 2s infinite linear;
-}
+
 .discount_code button{
     background-color: #FF6B35;
     color: white;
     height: 50px;
     width: 150px;
     border-radius: 40px;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: bold;
     border: none;
     margin-top: 60px;
@@ -838,10 +842,356 @@
     background-color: #FFC312;
     color: black;
 }
+
+/* blog */
 .blog{
     position: relative;
-    top: 255vh;
-    height: 200vh;
-    background-color: #ff9933;
-    opacity: 0.9;
+    top: 200vh;
+    height: 130vh;
+    background-color: #FF8C4E;
+    background-image: url(../assets/backgrounds/bg-blog-overlay.png);
+    background-repeat: no-repeat;
+}
+.blog h1{
+    text-align: center;
+    padding: 70px 0 50px 0;
+}
+.blog_content{
+    position: relative;
+    width: 30%;
+    height: 90vh;
+    margin: 0 20px;
+}
+.img_blog_wrapper{
+    overflow: hidden;
+    border-bottom-right-radius: 100px;
+    width: 450px;
+    height: 320px;
+}
+.blog_content img{ 
+    width: 450px;
+    height: 320px;
+    transform: scale(1.15);
+    transition: 0.5s ease-in-out;
+}
+.blog_hover_effect{
+    position: absolute;
+    top: 0;
+    width: 450px;
+    height: 320px;
+    border-bottom-right-radius: 100px;
+    background-color: black;
+    opacity: 0.2;
+    transition: 0.5s ease-in-out;
+    display: none;
+}
+
+.img_section{
+    position: relative;
+}
+.date{
+    background-color: #fc591e;
+    color: white;
+    width: 130px;
+    padding: 5px;
+    position: absolute;
+    bottom: 0;
+    border-top-right-radius: 40px;
+    font-weight: bold;
+    font-size: 1.35rem;
+    z-index: 1;
+    transition: 0.5s;
+}
+.blog_content h3{
+    padding: 15px 5px;
+}
+.blog_content p{
+    margin-top: 15px;
+    font-size: 1.3rem;
+}
+.more{
+    background-color: #fc591e;
+    color: white;
+    font-size: 1.2rem;
+    width: 150px;
+    height: 50px;
+    padding: 10px;
+    border-radius: 40px;
+    font-weight: bold;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    cursor: pointer;
+}
+.blog_list{
+    display: flex;
+    justify-content: center;
+}
+.more:hover{
+    background-color: #000;
+    color: white;
+}
+
+/* moments */
+.moments{
+    background-image: url(../assets/backgrounds/bg-home-overlay.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    opacity: 1;
+    height: 180vh;
+    position: relative;
+    top: 200vh;
+    background-color: #fffaf0;
+}
+.moments>h1{
+    text-align: center;
+    padding: 60px;
+}
+.moments_wrapper{
+    display: grid;
+    grid-template-columns: auto 22% auto;
+    grid-template-rows: auto 30% auto;
+    gap: 50px;
+}
+.moment_item{
+    height: 70vh;
+    position: relative;
+}
+.img_mask{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(255, 255, 255, 0), rgba(40, 40, 40, 0.8));
+    border-radius: 20px;
+}
+.moments_wrapper>.moment_item:nth-child(1){
+    width: 60%;
+    height: 70%;
+    position: relative;
+    top: 12vh;
+    left: 14.5vw;
+}
+.moments_wrapper>.moment_item:nth-child(3){
+    width: 60%;
+    height: 70%;
+    position: relative;
+    top: 12vh;
+}
+.moments_wrapper>.moment_item:nth-child(4){
+    width: 60%;
+    height: 90%;
+    position: relative;
+    left: 14.5vw;
+}
+
+.moments_wrapper>.moment_item:nth-child(6){
+    width: 60%;
+    height: 90%;
+    position: relative;
+}
+.moments_wrapper>.moment_item:nth-child(4), .moments_wrapper>.moment_item:nth-child(5), .moments_wrapper>.moment_item:nth-child(6){
+    position: relative;
+    top: -70px;
+}
+.img_moment_wrapper{
+    height: 100%;
+    overflow: hidden;
+    /* position: relative; */
+    border-radius: 20px;
+}
+.img_moment{
+    width: 100%;
+    height: 100%;
+    transform: scale(1.07);
+    transition: 0.5s ease-in;
+}
+
+.moment_item>h5{
+    position: absolute;
+    bottom: 8%;
+    left: 30%;
+    width: 63%;
+    color: whitesmoke;
+}
+
+.moment_item>button{
+    position: absolute;
+    bottom: 8%;
+    left: 10%;
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+    border: none;
+    color: white;
+    background-color: #FF6B35;
+    animation: pulse 2s infinite;
+    cursor: pointer;
+}
+
+/* question */
+.question{
+    position: relative;
+    top: 200vh;
+    background: #FF8C4E;
+    height: 130vh;
+}
+.question>h1{
+    text-align: center;
+    padding: 60px 0 30px 0;
+}
+.question_content{
+    width: 60%;
+    position: absolute;
+    left: 7%;
+}
+.question_item{
+    padding: 10px;
+    margin: 10px;
+    background: white;
+    border-radius: 20px;
+    position: relative;
+    box-shadow: 1px 2px 5px gray;
+    cursor: pointer;
+}
+.question_item>h3{
+    margin: 10px 20px;
+}
+.question_item>p{
+    padding: 10px;
+    margin-top: 20px;
+    font-size: 1.3rem;
+    display: none;
+    transition: display 5s ease-out;
+}
+.question_item:nth-child(1)>p{
+    display: block;
+}
+.question_item:nth-child(1)>.check{
+    background: #fc591e;
+}
+.check{
+    width: 40px;
+    height: 40px;
+    background: #000;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    right: 50px;
+    top: 20px;
+}
+.check>svg{
+    width: 30px;
+    height: 30px;
+    fill: white;
+}
+.question_right_side{
+    background: white;
+    width: 20%;
+    height: 90vh;
+    position: relative; 
+    left: 71%;
+    border-radius: 20px;
+    box-shadow: inset 2px 2px 5px gainsboro;
+}
+.img_question{
+    width: 80%;
+    position: absolute;
+    bottom: 0;
+    right: 30px;
+    animation: slide-left 2s ease-in infinite alternate ;
+}
+
+.question_btn_contact{
+    position: absolute;
+    left: 25%;
+    top: 75px;
+    color: white;
+}
+.question_right_side>h2{
+    padding: 30px 0 0 10px;
+}
+.img_click{
+    width: 25%;
+    position: relative;
+    top: 5px;
+    left: 25px;
+    transform: rotate(50deg);
+}
+
+/* partner */
+.partner{
+    position: relative;
+    top: 200vh;
+    background: #FF8C4E;
+    height: 80vh;
+    background-image: url(../assets/backgrounds/bg-partner-overlay.png);
+}
+.partner>h1{
+    position: relative;
+    text-align: center;
+    padding-top: 20px;
+}
+.partner>svg{
+    width: 90px;
+    height: 90px;
+    position: absolute;
+    fill: white;
+    left: 47%;
+}
+.partner_list{
+    display: flex;
+    width: 100%;
+    animation: slide 40s infinite linear;
+}
+.partner_wrapper{
+    width: 85%;
+    overflow: hidden;
+    position: relative;
+    top: 10vh;
+    left: 7%;
+}
+@keyframes slide {
+    0%{
+        transform: translateX(0);
+    }
+    10%{
+        transform: translateX(-15%);
+    }
+    20%{
+        transform: translateX(-30%);
+    }
+    30%{
+        transform: translateX(-40%);
+    }
+    40%{
+        transform: translateX(-50%);
+    }
+    50%{
+        transform: translateX(-60%);
+    }
+    60%{
+        transform: translateX(-50%);
+    }
+    70%{
+        transform: translateX(-40%);
+    }
+    80%{
+        transform: translateX(-30%);
+    }
+    90%{
+        transform: translateX(-15%);
+    }
+    100%{
+        transform: translateX(0);
+    }
+}
+#footer{
+    position: relative;
+    top: 200vh;
 }
