--- a/css/Vet.css
+++ b/css/Vet.css
@@ -1,15 +1,31 @@
 .container-body{
     position: relative;
-    top: 150px;
+    top: 120px;
+    font-size: 1.5rem;
+    background-color: #fffaf0;
 }
 
 /* intro */
-.location{
+.address{ 
+    position: absolute;
+    top: 5px;
     margin-left: 50px;
+    padding: 20px 0;
+    font-size: 1.2rem;
+}
+.bg_overlay{
+    background-image: url(../assets/backgrounds/bg-home-overlay.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    opacity: 1;
+    height: 70vh;
+    position: relative;
+    z-index: 0;
 }
 .intro_content{
     width: 40%;
-    position: relative;
+    position: absolute;
     left: 50%;
     top: 50px;
     text-align: center;
@@ -20,14 +36,16 @@
 .btn{
     display: flex;
     justify-content: center;
-    background-color: #F2AB1E;
-    width: 130px;
+    background-color: #FF6B35;
+    width: 150px;
     height: 50px;
     border-radius: 40px;
     text-align: center;
     font-weight: bold;
     margin: 50px 50px;
-    color: black;
+    color: white;
+    box-shadow: 2px 2px 2px grey;
+    font-size: 1.2rem;
 }
 .btn i{
     position: relative;
@@ -37,6 +55,7 @@
 .btn>p{
     position: relative;
     top: 15px;
+    font-size: 1.2rem;
 }
 .intro_btn_field{
     display: flex;
@@ -50,17 +69,20 @@
 .img_intro_vet{
     width: 40%;
     position: absolute;
-    top: 40px;
+    top: 20vh;
+    z-index: 2;
 }
 
 /* service */
 .service_fr1{
     height: 650px;
+    position: relative;
+    top: -50px;
 }
 .service{
     position: absolute;
     width: 100%;
-    top: 555px;
+    top: 85vh;
 }
 .service_list{
     display: flex;
@@ -93,19 +115,19 @@
     text-align: center;
 }
 .service_section>p{
-    padding-top: 20px;
-    color: #EEBE62;
+    padding-top: 30px;
+    color: #fff;
+    font-weight: bold;
 }
 .service h1{
-    color: #EEBE62;
+    color: #fc591e;
     margin: 20px 0 30px 0;
 }
 .service_content{
     position: absolute;
-    left: 900px;
-    top: 500px;
-    width: 30%;
-    font-weight: bold;
+    left: 850px;
+    top: 80vh;
+    width: 38%;
 }
 .service_img{
     position: relative;
@@ -115,31 +137,31 @@
 }
 .service_content li{
     margin: 10px;
-    line-height: 20px;
+    line-height: 30px;
+    font-size: 1.3rem;
 }
 
 
 /* menu */
 .menu_fr{
     position: relative;
-    top: 200px;
-    z-index: -1;
+    top: 34vh;
     height: 1200px;
 }
 .menu{
     position: absolute;
-    top: 1600px;
+    top: 235vh;
     width: 100%;
 }
 .btn_option{
-    color: #F2AB1E;
+    color: #fc591e;
     background-color: white;
 }
 .menu_option{
     display: flex;
     justify-content: end;
     position: relative;
-    right: 350px;
+    right: 10vw;
 }
 .menu table{
     position: relative;
@@ -148,12 +170,13 @@
     box-shadow: 1px 1px 10px gray inset;
     padding: 10px 50px;
     z-index: 1;
+    font-size: 1.1rem;
 }
 .menu td{
     padding: 10px 40px;
 }
 .menu_left{
-    width: 50%;
+    width: 40%;
     position: absolute;
     text-align: center;
     top: 200px;
@@ -164,8 +187,8 @@
 }
 .menu_btn_booking{
     position: relative;
-    left: 35%;
-    color: #F2AB1E;
+    left: 30%;
+    color: white;
     background-color: black;
 }
 .menu_img{
@@ -176,17 +199,28 @@
 }
 
 /* urgency */
+.urgency_bg_overlay{
+    background-image: url(../assets/backgrounds/bg-partner-overlay.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    opacity: 1;
+    height: 100vh;
+    position: relative;
+}
 .urgency{
     position: relative;
-    top: 300px;
+    top: 200px;
 }
 .urgency_content{
     width: 50%;
     text-align: center;
+    position: absolute;
+    top: 20vh;
 }
 .urgency_img{
     position: absolute;
-    top: -150px;
+    top: -50px;
     right: 0;
 }
 .urgency_heading{
@@ -212,23 +246,29 @@
     position: relative;
     top: 100px;
     left: 80px;
+    font-size: 1.3rem;
 }
 .urgency_btn_contact{
     position: relative;
     left: 320px;
     top: 100px;
 }
+.urgency_btn_contact>i{
+    position: relative;
+    top: 22px;
+}
 
 /* comment */
 .comment_fr{
-    position: relative;
-    top: 550px;
-    height: 400px;
+    position: absolute;
+    top: 450vh;
+    height: 100vh;
 }
 .comment{
     position: relative;
-    top: 200px;
     width: 100%;
+    top: 30vh;
+    font-size: 1.3rem;
 }
 .comment_img{
     position: absolute;
@@ -248,7 +288,7 @@
 .comment_content{
     position: relative; 
     left: 450px;
-    top: 50px;
+    top: 10px;
 }
 .comment hr{
     width: 70px;
@@ -294,4 +334,8 @@
     margin: 5px;
     background-color: #fff;
     border-radius: 50px;
+}
+#footer{
+    position: relative;
+    top: 45vh;
 }
