--- a/css/footer.css
+++ b/css/footer.css
@@ -12,16 +12,15 @@ a {
     position: relative;
     width: 80px;
     height: 80px;
-    bottom: 120px;
-    left: -30px;
+    top: 4vh;
+    right: 30%;
     fill: #ff6b35;
 
 }
 
 .footer-logo {
     position: relative;
-    left: -30px;
-    top: 30px;
+    right: 5%;
 }
 
 #hr-lines {
@@ -77,7 +76,9 @@ a {
 }
 
 .footer-time-menu {
-    margin-top: 80px;
+    margin-top: 10px;
+    position: relative;
+    right: 15%;
 }
 
 
@@ -90,7 +91,7 @@ a {
 }
 
 .footer-menu-name {
-    font-size: 25px;
+    font-size: 1.5rem;
     font-weight: 1200;
     letter-spacing: 0.1em;
     line-height: 18px;
@@ -120,6 +121,7 @@ a {
     margin-top: 15px;
     line-height: 20px;
     transition: 0.2s ease-in-out;
+    font-size: 1.2rem;
 }
 
 .footer-menu-sub-list li:hover {
@@ -129,7 +131,7 @@ a {
     color: #ff6b35;
     z-index: 0;
     cursor: pointer;
-    font-size: 1.1rem;
+    font-size: 1.35rem;
 }
 
 
