--- a/css/header.css
+++ b/css/header.css
@@ -33,8 +33,14 @@ header {
     padding: 20px 40px;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 15px 15px rgba(0, 0, 0, 0.05);
-    font-size: 1.25em;
+    box-shadow: 0 15px 15px rgba(0, 0, 0, 0.085);
+    font-size: 1.5rem;
+    background: #FFFAF0;
+    z-index: 1;
+}
+.logo{
+    position: relative;
+    left: 1%;
 }
 
 .group {
@@ -58,13 +64,13 @@ ul.dropdown li {
     line-height: 50px;
     border-radius: 5px;
     padding-left: 5px;
-    font-size: 0.85em;
+    font-size: 1.2rem;
 }
 
 
 ul.dropdown {
     margin-top: 4px;
-    width: 28%;
+    width: 27%;
     height: 200px;
     position: absolute;
     z-index: 999;
@@ -85,7 +91,7 @@ ul.dropdown a:hover {
 .dropdown li:hover {
     position: relative;
     background: #F2F2F2;
-    width: 260px;
+    width: 242px;
     left: -4.2%;
     border-left: 5px solid #FF6B35;
     padding-left: 15px;
