--- a/css/blog-details.css
+++ b/css/blog-details.css
@@ -4,8 +4,10 @@ body {
 }
 
 .page-ruler {
-    margin-top: 9%;
-    padding-left: 40px
+    margin-top: 10%;
+    margin-left: 3%;
+    font-size: 1.2rem;
+
 }
 
 .blog-details-container {
@@ -42,7 +44,7 @@ body {
 
 .btn {
     height: 40px;
-    padding: 7px 15px;
+    padding: 10px 15px;
     border-radius: 20px;
     background-color: #FF6B34;
     color: #fffaf0;
@@ -118,6 +120,7 @@ body {
     width: 88%;
     margin-top: 1%;
     text-align: justify;
+    font-size: 1.25rem;
 
 }
 
@@ -133,7 +136,7 @@ body {
 
 .other-news {
     position: relative;
-    height: 1200px;
+    height: 180vh;
     background-image: url(../assets/images/blog-details/background.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -197,17 +200,18 @@ body {
     font-family: 'Quicksand', sans-serif;
     border-style: none;
     margin-top: 3%;
+    font-size: 1rem;
 }
 
 .hashtag {
     float: right;
-    margin-left: 74%;
+    margin-left: 70%;
 }
 
 .title {
     margin-left: 5%;
     margin-bottom: 2%;
-    padding-top: 10%;
+    padding-top: 15%;
 }
 
 .title h1 {
@@ -340,4 +344,10 @@ button:hover {
 
 .pagination a:hover {
     background-color: #ff9900;
+}
+
+#footer {
+    position: absolute;
+    width: 100%;
+    top: 800vh;
 }
